<resources>
    <string name="app_name">OST</string>
    <string name="navigation_start">Start</string>
    <string name="navigation_destination">Destination</string>

    <string name="action_search_route">Search</string>
    <string name="error_failed_to_load_connection">Failed to load connections</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="description_invert_direction">Reverse direction</string>
    <string name="departure_time">Departure time</string>
    <string name="request_choose_to">Choose destination</string>
    <string name="request_choose_from">Choose start</string>
    <string name="title_activity_choose_station" translatable="false">@string/request_choose_station</string>
    <string name="request_choose_station">Choose station</string>
    <string name="clearInput">Clear input</string>
    <string name="menu_settings">Settings</string>

    <string name="DarkGreenTheme" translatable="false">DarkGreenTheme</string>
    <string name="LightGreenTheme" translatable="false">LightGreenTheme</string>
    <string name="DarkGrayGreenTheme" translatable="false">DarkGrayGreenTheme</string>
    <string name="prefs_category_appearance">Appearance</string>
    <string name="prefs_summ_appearance">Look &amp; Feel</string>

    <string name="theme_dark_green_name">Dark green</string>
    <string name="theme_light_green_name">Light green</string>
    <string name="theme_dark_gray_green_name">Dark green gray</string>

    <string-array name="theme_names" translatable="false">
        <item name="theme_dark_green_name">@string/theme_dark_green_name</item>
        <item name="theme_light_green_name">@string/theme_light_green_name</item>
        <item name="theme_dark_gray_green_name">@string/theme_dark_gray_green_name</item>
    </string-array>
    <string-array name="theme_values">
        <item name="theme_dark_green">@string/DarkGreenTheme</item>
        <item name="theme_light_green">@string/LightGreenTheme</item>
        <item name="theme_dark_gray_green">@string/DarkGrayGreenTheme</item>
    </string-array>
    <array name="theme_styles">
        <item name="theme_dark_green">@style/GreenDarkTheme</item>
        <item name="theme_light_green">@style/GreenLightTheme</item>
        <item name="theme_dark_gray_green">@style/GrayTealTheme</item>
    </array>
    <string name="title_activity_error_report">App Crashed</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_stacktrace" translatable="false">java.io.FileNotFoundException: /data/data/at.bitfire.davdroid/app_KeyStore/KeyStore.bks: open failed: ENOENT (No such file or directory) \n
    at libcore.io.IoBridge.open(IoBridge.java:409)\n
    at java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:78)\n
    at at.bitfire.cert4android.CustomCertService.onCreate(CustomCertService.kt:69)\n
    at android.app.ActivityThread.handleCreateService(ActivityThread.java:3021)\n
    at android.app.ActivityThread.access$1800(ActivityThread.java:156)\n
    at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1446)\n
    at android.os.Handler.dispatchMessage(Handler.java:102)\n
    at android.os.Looper.loop(Looper.java:157)\n
    at android.app.ActivityThread.main(ActivityThread.java:5872)\n
    at java.lang.reflect.Method.invokeNative(Native Method)\n
    at java.lang.reflect.Method.invoke(Method.java:515)\n
    at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:858)\n
    at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:674)\n
    at dalvik.system.NativeStart.main(Native Method)\n
 Caused by: libcore.io.ErrnoException: open failed: ENOENT (No such file or directory)\n
    at libcore.io.Posix.open(Native Method)\n
    at libcore.io.BlockGuardOs.open(BlockGuardOs.java:110)\n
    at libcore.io.IoBridge.open(IoBridge.java:393)\n
    at java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:78) \n
    at at.bitfire.cert4android.CustomCertService.onCreate(CustomCertService.kt:69) \n
    at android.app.ActivityThread.handleCreateService(ActivityThread.java:3021) \n
    at android.app.ActivityThread.access$1800(ActivityThread.java:156) \n
    at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1446) \n
    at android.os.Handler.dispatchMessage(Handler.java:102) \n
    at android.os.Looper.loop(Looper.java:157) \n
    at android.app.ActivityThread.main(ActivityThread.java:5872) \n
    at java.lang.reflect.Method.invokeNative(Native Method) \n
    at java.lang.reflect.Method.invoke(Method.java:515) \n
    at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:858) \n
    at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:674) \n
    at dalvik.system.NativeStart.main(Native Method) </string>
    <string name="title_stacktrace">Stacktrace</string>
    <string name="title_app_version">Version</string>
    <string name="title_android_release">Android Release</string>
    <string name="format_app_version" formatted="true">%1$s (%2$d)</string>
    <string name="title_android">Android</string>
    <string name="title_app">App</string>
    <string name="title_app_signature">Signature</string>
    <string name="title_build">Build</string>
    <string name="title_build_id">Build ID</string>
    <string name="build_id_format">%1$s (%2$s)</string>
    <string name="title_android_sdk">SDK</string>
    <string name="title_app_package">Package</string>
    <string name="title_error">Error</string>
    <string name="error_report_email" translatable="false">bugreport@unstable.ch</string>
    <string name="error_report_subject">Bug Report</string>
    <string name="error_report_title">Send Bugreport</string>
    <string name="contentDescription_iconWalk">Icon Walk</string>
    <string name="contentDescription_iconTransportation">transportation icon</string>
    <string name="contentDescription_aboutLogo">OST logo</string>
    <string name="duration_format_days">%1$dd %2$dh %3$02d\'</string>
    <string name="duration_format_hours">%1$dh %2$02d\'</string>
    <string name="duration_format_minutes">%1$d\'</string>
    <string name="departure_time_same_day">Departure at %1$s</string>
    <string name="departure_time_other_day">Departure at %1$s the %2$s</string>
    <string name="arrival_time_same_day">Arrival at %1$s</string>
    <string name="arrival_time_other_day">Arrival at %1$s the %2$s</string>
    <string name="departure_time_now">Now</string>

    <string name="time_restriction_arrival">Arrival</string>
    <string name="time_restriction_departure">Departure</string>


    <string name="pref_station_dao_factory_title">Station Datasource</string>
    <string name="pref_station_dao_factory_summary">The data source for station autocompletion</string>

    <string name="station_dao_factory_offline" translatable="false">ch.unstable.ost.api.offline.StationsDAOFactory</string>
    <string name="station_dao_factory_search_ch" translatable="false">ch.unstable.ost.api.search.StationsDAOFactory</string>
    <string name="station_dao_factory_transport_ch" translatable="false">ch.unstable.ost.api.transport.StationsDAOFactory</string>
    <string name="station_dao_factory_sbb_ch" translatable="false">ch.unstable.ost.api.sbb.SbbStationsDaoFactory</string>
    <string-array name="prefs_station_dao_factory_values">
        <item>@string/station_dao_factory_offline</item>
        <item>@string/station_dao_factory_search_ch</item>
        <item>@string/station_dao_factory_transport_ch</item>
        <item>@string/station_dao_factory_sbb_ch</item>
    </string-array>
    <string-array name="prefs_station_dao_factory_names">
        <item>@string/station_dao_offline</item>
        <item>@string/station_dao_search_ch</item>
        <item>@string/station_dao_transport_opendata_ch</item>
        <item>@string/station_dao_sbb_ch</item>
    </string-array>
    <string name="prefs_station_dao_factory_default" translatable="false">@string/station_dao_factory_offline</string>
    <string name="prefs_category_content">Content</string>
    <string name="station_dao_offline">Offline</string>
    <string name="station_dao_search_ch" translatable="false">timetable.search.ch</string>
    <string name="station_dao_transport_opendata_ch" translatable="false">transport.opendata.ch</string>
    <string name="station_dao_sbb_ch" translatable="false">sbb.ch</string>
    <string name="format_train_platform">Pl. %1$s</string>
    <string name="format_bus_platform">Pl. %1$s</string>
    <string name="connection_direction">Direction %1$s</string>
    <string name="fromAndTo">%1$s to %2$s</string>
    <string name="action_view_more">View more</string>
    <string name="action_open">Open</string>
    <string name="title_activity_query_history">Query History</string>
    <string name="last_query_title">Last search</string>
    <string name="action_resport_error">Report</string>
    <string name="button_action_retry_on_error">Try again</string>
    <string name="error_failed_to_load_last_query">Failed to load last query</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="favorites_card_title">Favorites</string>
    <string name="action_favorite">Favorize</string>
    <string name="error_failed_to_load_favorites">Failed to load favorites</string>
    <string name="station_stay_format">%1$s - %2$s</string>
    <string name="tab_about">About</string>
    <string name="tab_licenses">Licenses</string>
    <string name="copyright"> %1$s by %2$s under %3$s</string>
    <string name="github_url" translatable="false">https://github.com/coffeemakr/OST</string>
    <string name="title_licenses">Licenses</string>
    <string name="app_description">Open-source, free transportation app for Switzerland</string>
    <string name="contribution_title">Contribute</string>
    <string name="contribution_encouragement">Code and issues are very welcome!</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="app_license_title">License</string>
    <string name="app_license">OST is licensed 2017 under GPLv3.</string>
    <string name="read_full_license">Read full license</string>
    <string name="action_open_website">Open website</string>
    <string name="action_about">About</string>

</resources>
