<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    app:elevation="4dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/toolbarTheme"
        app:popupTheme="?attr/toolbarPopupTheme"
        app:layout_scrollFlags="scroll|snap"/>


    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fromIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/fromButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fromButton"
            app:srcCompat="?attr/ic_my_location_24dp"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/fromButton"
            style="@style/HeadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/request_choose_from"
            android:theme="@style/HeadButtonTheme"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/fromIcon"
            app:layout_constraintRight_toLeftOf="@+id/reverseDirectionButton"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" />

        <ImageButton
            android:id="@+id/reverseDirectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:contentDescription="@string/description_invert_direction"
            app:layout_constraintBottom_toBottomOf="@+id/toButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fromButton"
            app:srcCompat="?attr/ic_swap_vert_24dp" />

        <ImageView
            android:id="@+id/toIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/toButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toButton"
            app:srcCompat="?attr/ic_target_24dp"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/toButton"
            style="@style/HeadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/request_choose_to"
            android:theme="@style/HeadButtonTheme"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/toIcon"
            app:layout_constraintRight_toLeftOf="@+id/reverseDirectionButton"
            app:layout_constraintTop_toBottomOf="@+id/fromButton"
            android:layout_marginStart="8dp" />

        <ImageView
            android:id="@+id/fromToConnectorIcon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toTopOf="@+id/toIcon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fromIcon"
            app:srcCompat="?attr/ic_dots_vert_24dp"
            tools:ignore="ContentDescription"
            android:layout_marginStart="8dp" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/timeSettingsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:background="?colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_scrollFlags="scroll|snap">

        <ImageView
            android:id="@+id/timeIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="?attr/ic_tune_24dp_no_vector" />

        <TextView
            android:id="@+id/timeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Departure 11:23" />
    </LinearLayout>
</android.support.design.widget.AppBarLayout>

